--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/codarchlab/idai-field-client.git"
+    "url": "https://github.com/scuy/idai-field.git"
   },
   "dependencies": {
     "@angular/common": "4.2.2",
@@ -82,6 +82,7 @@
     "svg-pan-zoom": "3.5.3",
     "systemjs": "0.19.31",
     "tsfun": "1.16.10",
+    "update-electron-app": "^1.3.0",
     "viz.js": "1.8.1",
     "zone.js": "0.8.11"
   },
