--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
       "category": "public.app-category.productivity",
       "target": "zip",
       "icon": "img/logo.icns",
-      "artifactName": "iDAI.field-client-${version}-MacOS.${ext}"
+      "artifactName": "iDAI.field-client-${version}-MacOS.${ext}",
+      "publish": "github"
     },
     "win": {
       "target": "zip",
@@ -60,6 +61,7 @@
     "Leaflet.vector-markers": "0.0.6",
     "angular2-uuid": "1.1.0",
     "bootstrap": "4.0.0-beta",
+    "electron-updater": "^3.1.1",
     "es6-shim": "0.35.0",
     "express": "4.15.0",
     "express-pouchdb-dainst": "1000.0.3",
@@ -82,7 +84,6 @@
     "svg-pan-zoom": "3.5.3",
     "systemjs": "0.19.31",
     "tsfun": "1.16.10",
-    "update-electron-app": "^1.3.0",
     "viz.js": "1.8.1",
     "zone.js": "0.8.11"
   },
