--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "win": {
       "target": "zip",
       "icon": "img/logo.ico",
-      "artifactName": "iDAI.field-client-${version}-Windows.${ext}"
+      "artifactName": "iDAI.field-${version}-Windows.${ext}",
+      "publish": "github"
     },
     "npmRebuild": false,
     "extraResources": [
