--- a/appveyor.yml
+++ b/appveyor.yml
@@ -9,6 +9,8 @@ cache:
   - node_modules
   - '%APPDATA%\npm-cache'
   - '%USERPROFILE%\.electron'
+  - '%LOCALAPPDATA%\electron\Cache'
+  - '%LOCALAPPDATA%\electron-builder\cache'
 
 environment:
   GH_TOKEN:
