--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/scuy/idai-field.git"
+    "url": "https://github.com/dainst/idai-field.git"
   },
   "dependencies": {
     "@angular/common": "4.2.2",
